--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
 	"description": "Filip's test project",
 	"keywords": [""],
 	"type": "project",
-	"license": ["MIT", "BSD-3-Clause", "GPL-2.0", "GPL-3.0"],
+	"license": ["MIT"],
 	"require": {
-		"php": ">= 7.1.10",
+		"php": ">= 7.1",
 		"nette/application": "^2.4",
 		"nette/bootstrap": "^2.4.2",
 		"nette/caching": "^2.5",
@@ -15,22 +15,18 @@
 		"nette/forms": "^2.4",
 		"nette/http": "^2.4",
 		"nette/mail": "^2.4",
-		"nette/robot-loader": "^2.4 || ^3.0",
+		"nette/robot-loader": "^2.4",
 		"nette/security": "^2.4",
 		"nette/utils": "^2.4",
 		"latte/latte": "^2.4",
 		"tracy/tracy": "^2.4",
 		"contributte/console": "^0.3.0",
-		"nettrine/orm": "dev-master@dev"
+		"nettrine/orm": "dev-master",
+		"nettrine/migrations": "^0.3"
 	},
 	"require-dev": {
 		"nette/tester": "^2.0"
 	},
-	"prefer-stable" : true,
 	"minimum-stability": "dev",
-	"config": {
-		"platform": {
-			"php": "7.1.10"
-		}
-	}
+	"prefer-stable": true
 }
