--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -66,6 +66,6 @@ services:
 	- App\Model\RightModel
 
 	##CONSOLE
-	- App\Console\TestCommand
+	- App\Console\UpdateRightsCommand
 
 	router: App\RouterFactory::createRouter
